Start rewrite of chat in flux; start UserStore

--- a/index.html
+++ b/index.html
@@ -6,20 +6,8 @@
   <link rel="stylesheet" type="text/css" href="src/styles/chat.css">
 </head>
 <body>
-  <div>
-    <h1>Chat Room</h1>
+  <div id="chat-app"></div>
 
-    <div>
-      <label for="userId">User ID:</label>
-      <input type="text" id="userId" value="Error! Bad URL." disabled>
-    </div>
-
-    <div class="spacer"></div>
-    <div id="messages"></div>
-    <div class="spacer"></div>
-
-    <input type="text" id="messageInput" placeholder="Type a message..." disabled>
-  </div>
   <script src="build/chat.bundle.js"></script>
 </body>
 </html>
